changed a bit MainLibraryView, ALibraryView and TrashLibraryView